--- a/startup-builder/package.json
+++ b/startup-builder/package.json
@@ -2,7 +2,7 @@
   "name": "mvp-dynamics",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yourusername.github.io/mvp-dynamics",
+  "homepage": "https://mvpdynamics.dev",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
